# ydvr

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  README.rst  abinitio.cc  abinitio.h  callgrind.out.28978  dvr.xml  dvr_2001.xml  index.cc  mathtools.cc  mathtools.h  mddvr.cc  mddvr.h  molecule.cc  molecule.h  podvr.cc  podvr.cc.bak  podvr.h  project.vim  sincdvr.cc  sincdvr.h  ydvr.cc
doc/: CMakeLists.txt  Doxyfile
sample/: CMakeLists.txt  Makefile  harmonic_test.cc  mddvr_test.cc  sincdvr_test.cc
script/: harmonic_F.py
src/: CMakeLists.txt  Makefile  abstract_representation.cc  abstract_representation.h  abstract_representation.hh  config.cc  config.h  config.h.in  config.hh  config.hh.in  discrete_variable_representation.cc  discrete_variable_representation.h  dvr.cc  dvr.h  dvr.hh  dvr_2001.xml  harmonic.cc  harmonic.h  harmonic.hh  harmonic_test.cc  iotools.cc  iotools.h  log.cc  log.h  log.hh  mathtools.cc  mathtools.h  md_oscillator.cc  md_oscillator.h  md_podvr.cc  md_podvr.h  md_podvr.hh  mddvr_test.cc  mdindex.h  orthogonal_md_dvr.cc  orthogonal_md_dvr.h  orthogonal_md_dvr.hh  orthogonal_md_oscillator.cc  orthogonal_md_oscillator.h  orthogonal_md_representation.cc  (+30 more)
src/co_pes_2016/: ELJ.cc  ELJ.h  co_pes_2016.cc  co_pes_2016.h  dvr_2016.xml  ll
src/multidimension/: CMakeLists.txt  md_oscillator.hh  md_podvr.cc  orthogonal_md_dvr.cc  orthogonal_md_dvr.hh  orthogonal_md_oscillator.hh  simultaneous_diagonalization.cc  simultaneous_diagonalization.hh
src/tests/: harmonic_test.cc  sincdvr_test.cc
